--- a/coutries.html
+++ b/coutries.html
@@ -11,7 +11,7 @@
 
 <body>
     <section>
-        <h1>all country</h1>
+        <h1 style="color: blueviolet; text-align: center;">All country name with Capital, Continents and Flag</h1>
         <div id="all-countries"></div>
     </section>
     <script src="js/countries.js"></script>
