--- a/coutries.html
+++ b/coutries.html
@@ -11,6 +11,9 @@
 
 <body>
     <section>
+        <div id="country-detail"></div>
+    </section>
+    <section>
         <h1 style="color: blueviolet; text-align: center;">All country name with Capital, Continents and Flag</h1>
         <div id="all-countries"></div>
     </section>
